--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             --neutral-bg: #f4f4f4;
             --dark-text: #333;
             --selected-color: #888;
-            --bonus-yellow: #ffde59; /* Hız bonusu rengi */
+            --bonus-yellow: #ffde59;
         }
 
         * { box-sizing: border-box; margin: 0; padding: 0; user-select: none; }
@@ -30,7 +30,7 @@
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
             background-color: rgba(255, 255, 255, 0.95);
             display: flex; justify-content: center; align-items: center;
-            font-size: 2rem; font-family: 'Cairo', sans-serif; color: var(--dark-text);
+            font-size: 2rem; color: var(--dark-text);
             z-index: 200; opacity: 1; transition: opacity 0.5s ease-out;
         }
         #loading-indicator.hidden { opacity: 0; pointer-events: none; }
@@ -43,7 +43,7 @@
             opacity: 0; transform: translateY(-30px); transition: opacity 0.6s ease, transform 0.6s ease;
         }
         #game-header.visible { opacity: 1; transform: translateY(0); }
-        #game-header h1 { font-family: 'Noto Naskh Arabic', 'Traditional Arabic', serif; font-size: 2.2rem; margin: 0 0 10px 0; color: var(--dark-text); }
+        #game-header h1 { font-family: 'Noto Naskh Arabic', serif; font-size: 2.2rem; margin: 0 0 10px 0; color: var(--dark-text); }
 
         #progress-bar { display: flex; gap: 10px; justify-content: center; align-items: center; }
         .progress-dot { width: 30px; height: 8px; background-color: #ccc; border-radius: 4px; transition: background-color 0.3s, transform 0.3s, opacity 0.3s; }
@@ -68,7 +68,6 @@
         #player1-section .player-icon svg { fill: var(--player1-bg); }
         #player2-section .player-icon svg { fill: var(--player2-bg); }
 
-        /* PUAN KUTUSU: Kutulu görünüm (skor göstergeleri) */
         .player-score {
             display: inline-block;
             min-width: 96px;
@@ -91,7 +90,6 @@
 
         #round-timer-bar-container { position: absolute; bottom: 0; left: 0; width: 100%; height: 12px; background-color: #ccc; z-index: 51; display: none; }
         #round-timer-bar { width: 100%; height: 100%; background-color: var(--incorrect-color); transform: scaleX(1); transform-origin: left; }
-        #round-timer-bar.active {}
 
         @keyframes deplete-linear { 0% { transform: scaleX(1); } 100% { transform: scaleX(0); } }
 
@@ -124,7 +122,6 @@
             width: 100%; padding-top: 100%; position: relative; border: 5px solid transparent; border-radius: 15px; overflow: hidden;
             background-color: #e0e0e0; transition: transform 0.2s, border-color 0.2s, opacity 0.2s; cursor: pointer;
         }
-        .image-container.locked { pointer-events: none; }
         .image-grid.locked .image-container.selected { border-color: var(--selected-color); opacity: 1; transform: scale(0.95); }
         .image-container img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
         .image-container.correct { border-color: var(--correct-color); opacity: 1; }
@@ -139,7 +136,7 @@
         #overlay.transparent-bg { background-color: transparent; }
 
         .overlay-button {
-            padding: 20px 40px; font-family: 'Noto Naskh Arabic', 'Traditional Arabic', serif; font-size: 2.5rem; cursor: pointer; border: none; border-radius: 10px;
+            padding: 20px 40px; font-family: 'Noto Naskh Arabic', serif; font-size: 2.5rem; cursor: pointer; border: none; border-radius: 10px;
             background-color: var(--player1-bg); color: white; box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
         #reset-icon { font-size: 5rem; cursor: pointer; display: none; }
@@ -151,62 +148,34 @@
         }
 
         #player-select-prompt { display: none; flex-direction: column; align-items: center; text-align: center; }
-        #player-select-text { font-family: 'Noto Naskh Arabic', 'Traditional Arabic', serif; font-size: 3.5rem; font-weight: bold; color: var(--dark-text); margin-bottom: 20px; }
+        /* >>> Updated text here <<< */
+        #player-select-text { font-family: 'Noto Naskh Arabic', serif; font-size: 3.5rem; font-weight: bold; color: var(--dark-text); margin-bottom: 20px; }
         #start-countdown-button { font-size: 6rem; cursor: pointer; background: none; border: none; padding: 10px; color: var(--dark-text); transition: transform 0.2s ease-out; animation: zoom-fade 1.5s ease-in-out infinite; }
         #start-countdown-button:hover { transform: scale(1.1); }
 
         @keyframes zoom-fade { 0% { transform: scale(0.8); opacity: 0.5; } 50% { transform: scale(1); opacity: 1; } 100% { transform: scale(0.8); opacity: 0.5; } }
 
-        /* BOXED POINTS UPDATE: +10 kutulu */
         .score-burst {
-            position: absolute;
-            z-index: 205;
-            pointer-events: none;
-            font-size: 2.2rem;
-            font-weight: 800;
-            color: #1b3350;
-            background: #ffffff;
-            border: 2px solid rgba(0,0,0,0.08);
-            border-radius: 14px;
-            padding: 8px 14px;
-            box-shadow: 0 10px 24px rgba(0,0,0,0.12);
-            opacity: 1;
+            position: absolute; z-index: 205; pointer-events: none;
+            font-size: 2.2rem; font-weight: 800; color: #1b3350; background: #ffffff;
+            border: 2px solid rgba(0,0,0,0.08); border-radius: 14px; padding: 8px 14px;
+            box-shadow: 0 10px 24px rgba(0,0,0,0.12); opacity: 1;
         }
 
-        /* BOXED POINTS UPDATE + LIGHTNING EMPHASIS: hız bonusu kutusu */
         .speed-bonus-burst {
-            position: absolute;
-            z-index: 210;
-            pointer-events: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 2.2rem;
-            font-weight: 900;
-            color: #000;
-            background: var(--bonus-yellow);
-            border: 2px solid rgba(0,0,0,0.08);
-            border-radius: 16px;
-            padding: 10px 16px;
-            box-shadow: 0 12px 28px rgba(0,0,0,0.14);
-            opacity: 1;
+            position: absolute; z-index: 210; pointer-events: none;
+            display: inline-flex; align-items: center; gap: 10px;
+            font-size: 2.2rem; font-weight: 900; color: #000; background: var(--bonus-yellow);
+            border: 2px solid rgba(0,0,0,0.08); border-radius: 16px; padding: 10px 16px;
+            box-shadow: 0 12px 28px rgba(0,0,0,0.14); opacity: 1;
         }
-
-        /* LIGHTNING EMPHASIS: Şimşeği büyüt ve parlat */
         .speed-bonus-burst .lightning {
-            font-size: 2.8rem;
-            line-height: 1;
+            font-size: 2.8rem; line-height: 1;
             filter: drop-shadow(0 0 6px rgba(255,215,0,0.85));
-            text-shadow:
-              0 0 2px #000,
-              0 0 8px rgba(255,215,0,0.85),
-              0 0 14px rgba(255,215,0,0.65);
+            text-shadow: 0 0 2px #000, 0 0 8px rgba(255,215,0,0.85), 0 0 14px rgba(255,215,0,0.65);
         }
 
-        .celebration-animation {
-            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            font-size: 10rem; z-index: 90; opacity: 0; pointer-events: none;
-        }
+        .celebration-animation { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 10rem; z-index: 90; opacity: 0; pointer-events: none; }
         .celebration-animation.show { animation: fade-burst-out 3s ease-out forwards; }
         @keyframes fade-burst-out {
             0% { opacity: 1; transform: translate(-50%, -50%) scale(0.2); }
@@ -257,7 +226,7 @@
         <div class="player-section" id="player1-section">
             <div class="hud">
                 <div class="player-icon">
-                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
+                    <svg viewBox="0 0 24 24"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
                 </div>
                 <div class="player-score" id="score1">0</div>
             </div>
@@ -273,7 +242,7 @@
         <div class="player-section" id="player2-section">
             <div class="hud">
                  <div class="player-icon">
-                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
+                     <svg viewBox="0 0 24 24"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
                  </div>
                 <div class="player-score" id="score2">0</div>
             </div>
@@ -303,7 +272,8 @@
             <div id="winner-display"></div>
 
             <div id="player-select-prompt">
-                <div id="player-select-text">اِخْتَرْ لاعِبَيْن</div>
+                <!-- >>> Text updated here <<< -->
+                <div id="player-select-text">اِخْتَرْ مُتَسابِقَيْن</div>
                 <button id="start-countdown-button">👥</button>
             </div>
             <button class="overlay-button" id="start-button">اِبْدَأْ</button>
@@ -312,7 +282,6 @@
     </div>
 
     <script>
-        // --- DOM Elements ---
         const loadingIndicator = document.getElementById('loading-indicator');
         const startButton = document.getElementById('start-button');
         const overlay = document.getElementById('overlay');
@@ -334,13 +303,10 @@
         const grid1 = document.getElementById('image-grid-1');
         const grid2 = document.getElementById('image-grid-2');
 
-        const imageContainersGrid1 = document.querySelectorAll('#image-grid-1 .image-container');
-        const imageContainersGrid2 = document.querySelectorAll('#image-grid-2 .image-container');
         const allImageContainers = document.querySelectorAll('.image-container');
 
         const score1Display = document.getElementById('score1');
         const score2Display = document.getElementById('score2');
-        const progressDots = document.querySelectorAll('.progress-dot');
         const gameContainer = document.getElementById('game-container');
 
         const celebrationP1 = document.getElementById('celebration-p1');
@@ -351,15 +317,13 @@
         const playerSelectPrompt = document.getElementById('player-select-prompt');
         const startCountdownButton = document.getElementById('start-countdown-button');
 
-        // --- Sound Effects ---
         const correctSound = new Audio('https://actions.google.com/sounds/v1/positive/success.ogg');
-        theIncorrect = new Audio('https://actions.google.com/sounds/v1/negative/failure.ogg'); // keep var name unique if needed
+        theIncorrect = new Audio('https://actions.google.com/sounds/v1/negative/failure.ogg');
         const incorrectSound = theIncorrect;
         const instructionSound = new Audio('yonerge_3.mp3');
 
         let currentAudio = new Audio();
 
-        // --- Game Data ---
         const gameData = [
             { id: 1, image: "img1.png", audio: "v1.mp3" },
             { id: 2, image: "img2.png", audio: "v2.mp3" },
@@ -373,7 +337,6 @@
             { id: 10, image: "img10.png", audio: "v10.mp3" }
         ];
 
-        // --- Game State ---
         let state = {
             scores: { player1: 0, player2: 0 },
             currentRound: 0,
@@ -397,8 +360,7 @@
                 gameData.forEach(item => {
                     const img = new Image();
                     img.src = item.image;
-                    img.onload = () => { loadedCount++; if (loadedCount === totalImages) resolve(); };
-                    img.onerror = () => { loadedCount++; if (loadedCount === totalImages) resolve(); };
+                    img.onload = img.onerror = () => { loadedCount++; if (loadedCount === totalImages) resolve(); };
                 });
             });
         }
@@ -407,7 +369,6 @@
             return new Promise((resolve) => {
                 let loadedCount = 0;
                 const totalAudio = gameData.length + 1;
-                if (totalAudio === 0) { resolve(); return; }
                 const onAudioLoad = () => { loadedCount++; if (loadedCount === totalAudio) resolve(); };
                 const onAudioError = () => { loadedCount++; if (loadedCount === totalAudio) resolve(); };
 
@@ -488,8 +449,9 @@
             }
             resetRound();
 
-            const progressDots = document.querySelectorAll('.progress-dot');
-            progressDots.forEach((dot, index) => { dot.classList.toggle('active', index < state.currentRound); });
+            document.querySelectorAll('.progress-dot').forEach((dot, index) => {
+                dot.classList.toggle('active', index < state.currentRound);
+            });
 
             const currentQuestion = state.questions[state.currentRound];
             const correctId = currentQuestion.id;
@@ -582,9 +544,7 @@
             if (state.isMatchOver || state.isAnswered || state.currentRound > state.totalRounds || !state.questions[state.currentRound - 1]) return;
 
             if (!audioButton.classList.contains('round-active')) {
-                audioButton.classList.add('round-active');
-                audioButton.classList.add('playing-sound');
-                audioButton.classList.add('waiting');
+                audioButton.classList.add('round-active', 'playing-sound', 'waiting');
 
                 const currentDuration = state.questions[state.currentRound - 1].duration;
                 state.roundTimerStartTime = Date.now();
@@ -659,8 +619,7 @@
                 roundTimerBar.style.animationPlayState = 'paused';
             }
 
-            audioButton.classList.remove('playing-sound');
-            audioButton.classList.remove('waiting');
+            audioButton.classList.remove('playing-sound', 'waiting');
             playIcon.style.display = 'block';
             stopIcon.style.display = 'none';
         }
@@ -719,7 +678,6 @@
 
             allCorrectContainers.forEach(c => { c.classList.remove('selected'); c.classList.add('correct'); });
 
-            // 1) Doğruya +10 — KUTULU animasyon (yukarı & yavaş)
             let anyCorrect = false;
 
             if (p1Correct) {
@@ -740,7 +698,6 @@
 
             updateScores();
 
-            // 2) Hız bonusu: O turda rakibinden daha hızlı ve DOĞRU olan +10 — KUTULU sarı ⚡
             const p1RT = p1Correct ? Math.max(0, (p1Time || roundStart) - roundStart) : Infinity;
             const p2RT = p2Correct ? Math.max(0, (p2Time || roundStart) - roundStart) : Infinity;
 
@@ -779,7 +736,6 @@
             processAnswers();
         }
 
-        // BOXED POINTS UPDATE: +10 kutulu animasyon – yukarı ve yavaş
         function animateScoreBox(sourceElement, player, points) {
             if (!sourceElement) return;
             const burst = document.createElement('div');
@@ -799,7 +755,6 @@
             setTimeout(() => burst.remove(), 3000);
         }
 
-        // BOXED POINTS UPDATE + LIGHTNING EMPHASIS: hız bonusu kutusu – yukarı ve yavaş
         function animateSpeedBonusBox(sourceElement, player, points) {
             if (!sourceElement) return;
             const bonus = document.createElement('div');
@@ -829,7 +784,6 @@
             state.isMatchOver = true;
             stopAudioLoop(); clearTimeout(state.roundTimer);
 
-            // >>> Winner text updated as requested
             if (state.scores.player1 > state.scores.player2) {
                 winnerDisplay.textContent = "فازَ المُتَسابِق الأَوَّل";
                 winnerDisplay.style.color = 'var(--player1-bg)';
@@ -844,8 +798,6 @@
                 celebrationP1.classList.add('show');
                 celebrationP2.classList.add('show');
             }
-            // <<<
-
             winnerDisplay.style.display = 'block';
 
             overlay.classList.add('visible');
